Bug 723530 - double error reporting in ctype JS api implementation, r=bholley