js/src/ctypes/CTypes.cpp
@@ -3404,7 +3404,9 @@ JSBool
 CType::CreateArray(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* baseType = JS_THIS_OBJECT(cx, vp);
-  if (!baseType || !CType::IsCType(baseType)) {
+  if (!baseType)
+    return JS_FALSE;
+  if (!CType::IsCType(baseType)) {
     JS_ReportError(cx, "not a CType");
     return JS_FALSE;
   }
@@ -3435,7 +3437,9 @@ JSBool
 CType::ToString(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !(CType::IsCType(obj) || CType::IsCTypeProto(obj))) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CType::IsCType(obj) && !CType::IsCTypeProto(obj)) {
     JS_ReportError(cx, "not a CType");
     return JS_FALSE;
   }
@@ -3463,8 +3467,9 @@ JSBool
 CType::ToSource(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj ||
-      !(CType::IsCType(obj) || CType::IsCTypeProto(obj)))
+  if (!obj)
+    return JS_FALSE;
+  if (!CType::IsCType(obj) && !CType::IsCTypeProto(obj))
   {
     JS_ReportError(cx, "not a CType");
     return JS_FALSE;
@@ -3699,7 +3704,9 @@ JSBool
 PointerType::IsNull(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !CData::IsCData(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CData::IsCData(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -3721,7 +3728,9 @@ JSBool
 PointerType::OffsetBy(JSContext* cx, int offset, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !CData::IsCData(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CData::IsCData(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -4226,7 +4235,9 @@ JSBool
 ArrayType::AddressOfElement(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !CData::IsCData(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CData::IsCData(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -4602,8 +4613,9 @@ JSBool
 StructType::Define(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj ||
-      !CType::IsCType(obj) ||
+  if (!obj)
+    return JS_FALSE;
+  if (!CType::IsCType(obj) ||
       CType::GetTypeCode(obj) != TYPE_struct) {
     JS_ReportError(cx, "not a StructType");
     return JS_FALSE;
@@ -4849,7 +4861,9 @@ JSBool
 StructType::AddressOfField(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !CData::IsCData(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CData::IsCData(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -6075,7 +6089,9 @@ CData::Address(JSContext* cx, unsigned argc, jsval* vp)
   }
 
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !IsCData(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!IsCData(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -6183,7 +6199,9 @@ CData::ReadString(JSContext* cx, unsigned argc, jsval* vp)
   }
 
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !IsCData(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!IsCData(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -6294,8 +6312,9 @@ CData::ToSource(JSContext* cx, unsigned argc, jsval* vp)
   }
 
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj ||
-      !(CData::IsCData(obj) || CData::IsCDataProto(obj))) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CData::IsCData(obj) && !CData::IsCDataProto(obj)) {
     JS_ReportError(cx, "not a CData");
     return JS_FALSE;
   }
@@ -6348,7 +6367,9 @@ JSBool
 CDataFinalizer::Methods::ToSource(JSContext *cx, unsigned argc, jsval *vp)
 {
   JSObject* objThis = JS_THIS_OBJECT(cx, vp);
-  if (!objThis || !CDataFinalizer::IsCDataFinalizer(objThis)) {
+  if (!objThis)
+    return JS_FALSE;
+  if (!CDataFinalizer::IsCDataFinalizer(objThis)) {
     JS_ReportError(cx, "not a CDataFinalizer");
     return JS_FALSE;
   }
@@ -6405,7 +6426,9 @@ JSBool
 CDataFinalizer::Methods::ToString(JSContext *cx, unsigned argc, jsval *vp)
 {
   JSObject* objThis = JS_THIS_OBJECT(cx, vp);
-  if (!objThis || !CDataFinalizer::IsCDataFinalizer(objThis)) {
+  if (!objThis)
+    return JS_FALSE;
+  if (!CDataFinalizer::IsCDataFinalizer(objThis)) {
     JS_ReportError(cx, "not a CDataFinalizer");
     return JS_FALSE;
   }
@@ -6697,7 +6720,9 @@ CDataFinalizer::Methods::Forget(JSContext* cx, unsigned argc, jsval *vp)
   }
 
   JSObject *obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !CDataFinalizer::IsCDataFinalizer(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CDataFinalizer::IsCDataFinalizer(obj)) {
     return TypeError(cx, "a CDataFinalizer", OBJECT_TO_JSVAL(obj));
   }
 
@@ -6740,7 +6765,9 @@ CDataFinalizer::Methods::Dispose(JSContext* cx, unsigned argc, jsval *vp)
   }
 
   JSObject *obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !CDataFinalizer::IsCDataFinalizer(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!CDataFinalizer::IsCDataFinalizer(obj)) {
     return TypeError(cx, "a CDataFinalizer", OBJECT_TO_JSVAL(obj));
   }
 
@@ -7008,7 +7035,9 @@ JSBool
 Int64::ToString(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !Int64::IsInt64(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!Int64::IsInt64(obj)) {
     JS_ReportError(cx, "not an Int64");
     return JS_FALSE;
   }
@@ -7020,7 +7049,9 @@ JSBool
 Int64::ToSource(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !Int64::IsInt64(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!Int64::IsInt64(obj)) {
     JS_ReportError(cx, "not an Int64");
     return JS_FALSE;
   }
@@ -7179,7 +7210,9 @@ JSBool
 UInt64::ToString(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !UInt64::IsUInt64(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!UInt64::IsUInt64(obj)) {
     JS_ReportError(cx, "not a UInt64");
     return JS_FALSE;
   }
@@ -7191,7 +7224,9 @@ JSBool
 UInt64::ToSource(JSContext* cx, unsigned argc, jsval* vp)
 {
   JSObject* obj = JS_THIS_OBJECT(cx, vp);
-  if (!obj || !UInt64::IsUInt64(obj)) {
+  if (!obj)
+    return JS_FALSE;
+  if (!UInt64::IsUInt64(obj)) {
     JS_ReportError(cx, "not a UInt64");
     return JS_FALSE;
   }
